--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.SET_WALLPAPER"/>
     <uses-feature android:name="android.hardware.camera" />
 
     <application
@@ -35,6 +35,7 @@
         <activity
             android:name=".view.PayRequestScanActivity"
             android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
             android:screenOrientation="portrait" />
         <activity
             android:name=".view.AuthLoginActivity"
@@ -42,7 +43,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".view.PdfViewAgreementsActivity"
-            android:exported="true" />
+            android:exported="true"
+            />
         <activity
             android:name=".view.PayRequestTransactionActivity"
             android:exported="true"
@@ -132,6 +134,7 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
