--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,4 +106,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
 }
