--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,8 @@ dependencies {
 
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+
+    implementation('com.microblink:blinkcard:2.5.0@aar') {
+        transitive = true
+    }
 }
