--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".view.WebViewActivity1"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+        <activity
             android:name=".custom_camera.RetakeActivity"
             android:exported="true"
             android:screenOrientation="portrait"
@@ -40,9 +45,7 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".view.WebViewActivity"
-            android:exported="false"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".view.PaymentMethodsActivity"
             android:exported="false"
@@ -198,7 +201,6 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
-
         <activity
             android:name=".view.IdentityVerificationBindingLayoutActivity"
             android:exported="false"
