--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,6 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
 
-    <permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" android:protectionLevel="signature"/>
-
-
     <application
         android:name=".utils.MyApplication"
         android:allowBackup="true"
@@ -36,10 +33,10 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
-        <activity android:name=".view.TransactionDetailsActivity"
+        <activity
+            android:name=".view.TransactionDetailsActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".view.AddCardActivity"
             android:exported="false"
@@ -50,8 +47,7 @@
             android:name=".view.WebViewActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" >
-        </activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
         <activity
             android:name=".view.PaymentMethodsActivity"
             android:exported="false"
@@ -71,15 +67,13 @@
         <activity
             android:name=".view.PdfViewAgreementsActivity"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".view.PayRequestTransactionActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"/>
 
-
-        </activity>
         <activity
             android:name=".view.ConfirmPasswordActivity"
             android:exported="true"
