--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,8 +75,8 @@ android {
 
 dependencies {
 
-//    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+//    implementation 'androidx.appcompat:appcompat:1.2.0-alpha02'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
