--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,10 @@ android {
         }
     }
 
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
+
 }
 
 dependencies {
@@ -112,4 +116,7 @@ dependencies {
     implementation('com.microblink:blinkcard:2.5.0@aar') {
         transitive = true
     }
+
+    implementation 'org.apache.httpcomponents:httpcore:4.4.10'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.6'
 }
