--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,9 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.2.0-alpha03'
 
-        implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
+    implementation 'com.andrewjapar.rangedatepicker:rangedatepicker:0.3'
+
 
 }
