--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,14 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".view.WithdrawTokenActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.WithdrawPaymentMethodsActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+        <activity
             android:name=".view.AccountsActivity"
             android:exported="true"
             android:screenOrientation="portrait"
