--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    def appCenterSdkVersion = '4.3.1'
+    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
+    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
+
     implementation 'com.github.santalu:maskara:1.0.0'
     implementation 'androidx.biometric:biometric:1.1.0'
 
