--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,18 @@ plugins {
 
 android {
     signingConfigs {
-        releaseSigningConfig {
-            storeFile rootProject.file("app/keystore.jks")
-            storePassword System.getProperty("Coyni@1")
-            keyAlias System.getProperty("alias_name")
-            keyPassword System.getProperty("Coyni@1")
+        config {
+            keyAlias 'alias_name'
+            keyPassword 'Coyni@1'
+            storeFile file('../app/keystore.jks')
+            storePassword 'Coyni@1'
         }
+//        releaseSigningConfig {
+//            storeFile rootProject.file("app/keystore.jks")
+//            storePassword System.getProperty("Coyni@1")
+//            keyAlias System.getProperty("alias_name")
+//            keyPassword System.getProperty("Coyni@1")
+//        }
     }
     compileSdk 30
 
@@ -19,7 +25,7 @@ android {
         targetSdk 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -27,7 +33,8 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.releaseSigningConfig
+//            signingConfig signingConfigs.releaseSigningConfig
+            signingConfig signingConfigs.config
         }
         debug {
 
@@ -87,7 +94,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.android.support:multidex:2.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.0'
