--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -141,7 +141,7 @@
             android:theme="@style/ThemeFullSCreen"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name=".view.PayRequestScanActivity"
+            android:name=".view.ScanActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
@@ -149,11 +149,6 @@
             android:name=".view.PdfViewAgreementsActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".view.PayRequestTransactionActivity"
-            android:exported="true"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
         <activity
             android:name=".view.ConfirmPasswordActivity"
             android:exported="true"
