--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,5 +126,6 @@ dependencies {
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
