--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,8 @@ android {
             buildConfigField 'String', 'Country_Code', '\"US\"'
         }
         qa {
-            buildConfigField 'String', 'URL_PRODUCTION', '\"http://3.94.123.86:9001/\"'
+            buildConfigField 'String', 'URL_PRODUCTION', '\"http://54.204.152.195:9001/\"'
+//            buildConfigField 'String', 'URL_PRODUCTION', '\"http://3.94.123.86:9001/\"'
             buildConfigField 'String', 'Referer', '\"http://mobile/\"'
             buildConfigField 'String', 'Country_Code', '\"US\"'
         }
